<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2020 Samuel Jones

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License. -->

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <fragment
            android:id="@+id/navHostFragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/bottomNavigationBar"
            app:defaultNavHost="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:navGraph="@navigation/nav_graph" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="start"
            style="@style/Widget.MaterialComponents.BottomNavigationView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu="@menu/bottom_navigation_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navDrawerNavView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/backgroundNavigationLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/background_gradient_rectangle"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/logoOnNavigationForeground"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_cat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/contentDescriptionLogoOnNavigationForeground" />

                <TextView
                    android:id="@+id/navDrawAppTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/logoOnNavigationForeground"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:textSize="11pt"
                    android:text="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="@id/navDrawAppTitle"
                    app:layout_constraintTop_toBottomOf="@id/navDrawAppTitle"
                    android:text="@string/versionString"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/navDrawSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:drawableStart="@drawable/ic_settings_orange_24dp"
                android:drawablePadding="8dp"
                android:padding="16dp"
                android:textSize="10pt"
                android:onClick="navDrawOptionOnClick"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:padding="16dp"/>

            <LinearLayout
                android:id="@+id/navDrawLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="navDrawOptionOnClick"
                android:padding="16dp">

<!--                Not using text view with drawable for use in the Picasso library for loading images from a url-->

                <ImageView
                    android:id="@+id/navDrawLoginImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lock_orange_24dp"
                    android:contentDescription="@string/loginImageDescription" />

                <TextView
                    android:id="@+id/navDrawLoginText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="10pt"
                    android:paddingStart="8dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/navDrawAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:drawableStart="@drawable/ic_info_orange_24dp"
                android:drawablePadding="8dp"
                android:padding="16dp"
                android:textSize="10pt"
                android:onClick="navDrawOptionOnClick"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:padding="16dp"
                android:textSize="10pt"/>

            <TextView
                android:id="@+id/navDrawHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:drawableStart="@drawable/ic_help_orange_24dp"
                android:drawablePadding="8dp"
                android:padding="16dp"
                android:textSize="10pt"
                android:onClick="navDrawOptionOnClick"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:padding="16dp"/>
            <TextView
                android:id="@+id/navDrawFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:drawableStart="@drawable/ic_feedback_orange_24dp"
                android:drawablePadding="8dp"
                android:padding="16dp"
                android:textSize="10pt"
                android:onClick="navDrawOptionOnClick"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:padding="16dp"/>

        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>