...
        android:name="uk.ac.aber.dcs.mmp.faa.ui.account.MyAccountFragment"
        android:label="Account Details"
        tools:layout="@layout/my_account_fragment" />
    <fragment
        android:id="@+id/helpFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.help.HelpFragment"
        android:label="Help"
        tools:layout="@layout/help_fragment" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.feedback.FeedbackFragment"
        android:label="Feedback"
        tools:layout="@layout/feedback_fragment" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="uk.ac.aber.dcs.mmp.faa.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/home_fragment" >
...
