...
   See the License for the specific language governing permissions and
   limitations under the License. -->

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/catCardInfoFragmentScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
            app:layout_constraintStart_toStartOf="@id/catInfoFragmentMoreInfoTitle"
            android:paddingBottom="8dp"
            android:paddingHorizontal="16dp"
            android:textSize="8pt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/catInfoFragmentAdoptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adopt_this_cat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/catInfoFragmentDisabled"
...
